<resources>
    <string name="app_name">Timelapse</string>

    <string name="dummy_button">Start Timelapse</string>
    <string name="settings_label_1">Image Settings:</string>
    <string name="settings_label_2">Timelapse Settings:</string>
    <string name="settings_label_3">Animation Settings:</string>
    <string name="setting_1_1">Size:\u0009\u0009\u0009\u0009\u0009\u0009</string>
    <string name="setting_1_2">Quality:\u0009\u0009\u0009\u0009</string>
    <string name="setting_1_3">Crop Area:\u0009\u0009\u0009</string>
    <string name="setting_1_4">Zoom:\u0009\u0009\u0009\u0009</string>
    <string name="setting_2_1">Duration:\u0009\u0009\u0009</string>
    <string name="setting_2_2">Interval:\u0009\u0009\u0009\u0009</string>
    <string name="setting_3_1">Device:\u0009\u0009\u0009\u0009</string>
    <string name="setting_3_2">Pan Start-End:\u0009\u0009\u0009</string>
    <string name="setting_3_3">Tilt Start-End:\u0009\u0009\u0009</string>
    <string name="edit">Edit</string>
    <string name="change">Change</string>
    <string name="hour">h.</string>
    <string name="minute">m.</string>
    <string name="second">sec.</string>
    <string name="title_activity_timelapse_setup">Timelapse</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_record">RecordActivity</string>

</resources>
